# InterJudgeBackend

./: .gitignore  CMakeLists.txt  README.md  astyle.sh  astylerc  client.cpp  design.md  echo.cpp  illed_echo.cpp  mdbroker.cpp  mdcliapi2.hpp  mdclient.cpp  mdclient2.cpp  mdp.h  mdworker.cpp  mdwrkapi.hpp  record.md  tester.cpp  wrong_echo.cpp
components/: CMakeLists.txt  broker.cpp  client.cpp  compiler_g++.cpp  compiler_gpp.cpp  file_provider.cpp  tester.cpp
docker/: broker.Dockerfile  build.sh  compiler_gpp.Dockerfile  docker-cloud.yml  docker-compose.yml  file_provider.Dockerfile  inter-judge-base.Dockerfile  tester.Dockerfile  zmq-base.Dockerfile
proto/: Judge.proto  compiler_gpp.proto  dispatcher.proto  file_provider.proto  tester.proto
